--- a/CS506_Initial_Analysis_Report.ipynb
+++ b/CS506_Initial_Analysis_Report.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -643,14 +643,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gas and electricity of BU properties in 2015\n",
+      "      Gas  Electricity\n",
+      "52    0.0          0.0\n",
+      "54    0.0          0.0\n",
+      "55    0.0          0.0\n",
+      "56    0.0          0.0\n",
+      "58   -0.0          0.0\n",
+      "63    0.0          0.0\n",
+      "65    0.0          0.0\n",
+      "141   0.0          0.0\n",
+      "192   0.0          0.0\n",
+      "199   0.0          0.0\n",
+      "200   0.0          0.0\n",
+      "365   0.0          0.0\n",
+      "366   0.0          0.0\n",
+      "367   0.0          0.0\n",
+      "370   0.0          0.0\n",
+      "371   0.0          0.0\n",
+      "735   0.0          0.0\n",
+      "739   0.0          0.0\n",
+      "741   0.0          0.0\n",
+      "1012  0.0          0.0\n",
+      "1013  0.0          0.0\n",
+      "1014 -0.0          0.0\n",
+      "1099  0.0          0.0\n",
+      "1105  0.0          0.0\n",
+      "1107  0.0          0.0\n",
+      "1218  0.0          0.0\n",
+      "1219 -0.0          0.0\n",
+      "1233 -0.0          0.0\n",
+      "1299  0.0          0.0\n",
+      "1301  0.0          0.0\n",
+      "1305  0.0          0.0\n",
+      "1306  0.0          0.0\n",
+      "1307  0.0          0.0\n",
+      "1308  0.0          0.0\n",
+      "1311  0.0          0.0\n",
+      "1312  0.0          0.0\n",
+      "1379  0.0          0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Assignment of montly data \n",
-    "\n"
+    "\n",
+    "#Yearly EUI of Electricity and Gas in 2016\n",
+    "df2015_BU[['Site EUI (kBTU/sf)']] = df2015_BU[['Site EUI (kBTU/sf)']].astype(float)\n",
+    "df2015_BU.rename(index=str, columns={'% Electricity': 'Electricity', '% Gas': 'Gas'}, inplace = True)\n",
+    "df2015_BU[['Electricity']] = df2015_BU[['Electricity']].apply(lambda x: x.astype(str).str.strip('%').astype(float)/100.00)\n",
+    "df2015_BU[['Gas']] = df2015_BU[['Gas']].apply(lambda x: x.astype(str).str.strip('%').astype(float)/100.00)\n",
+    "df2015_BU['G_EUI'] = df2015_BU['Site EUI (kBTU/sf)'] * df2015_BU['Gas']\n",
+    "df2015_BU['E_EUI'] = df2015_BU['Site EUI (kBTU/sf)'] * df2015_BU['Electricity']\n",
+    "\n",
+    "#Yearly EUI of Electricity and Gas in 2016\n",
+    "df2016_BU[['Site EUI (kBTU/sf)']] = df2016_BU[['Site EUI (kBTU/sf)']].astype(float)\n",
+    "df2016_BU.rename(index=str, columns={'% Electricity': 'Electricity', '% Gas': 'Gas'}, inplace = True)\n",
+    "df2016_BU[['Electricity']] = df2016_BU[['Electricity']].apply(lambda x: x.astype(str).str.strip('%').astype(float)/100.00)\n",
+    "df2016_BU[['Gas']] = df2016_BU[['Gas']].apply(lambda x: x.astype(str).str.strip('%').astype(float)/100.00)\n",
+    "df2016_BU['G_EUI'] = df2016_BU['Site EUI (kBTU/sf)'] * df2016_BU['Gas']\n",
+    "df2016_BU['E_EUI'] = df2016_BU['Site EUI (kBTU/sf)'] * df2016_BU['Electricity']\n",
+    "\n",
+    "#Yearly EUI of Electricity and Gas in 2017\n",
+    "df2017_BU[['Site EUI (kBTU/sf)']] = df2017_BU[['Site EUI (kBTU/sf)']].astype(float)\n",
+    "df2017_BU.rename(index=str, columns={'% Electricity': 'Electricity', '% Gas': 'Gas'}, inplace = True)\n",
+    "df2017_BU[['Electricity']] = df2017_BU[['Electricity']].apply(lambda x: x.astype(str).str.strip('%').astype(float)/100.00)\n",
+    "df2017_BU[['Gas']] = df2017_BU[['Gas']].apply(lambda x: x.astype(str).str.strip('%').astype(float)/100.00)\n",
+    "df2017_BU['G_EUI'] = df2017_BU['Site EUI (kBTU/sf)'] * df2017_BU['Gas']\n",
+    "df2017_BU['E_EUI'] = df2017_BU['Site EUI (kBTU/sf)'] * df2017_BU['Electricity']\n",
+    "\n",
+    "#Monthly distribution of Gas EUI in each BU property in 2015\n",
+    "df2015_BU[['G_Jan']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[0] \n",
+    "df2015_BU[['G_Feb']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[1] \n",
+    "df2015_BU[['G_Mar']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[2]\n",
+    "df2015_BU[['G_Apr']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[3] \n",
+    "df2015_BU[['G_May']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[4]\n",
+    "df2015_BU[['G_Jun']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[5]\n",
+    "df2015_BU[['G_Jul']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[6]\n",
+    "df2015_BU[['G_Aug']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[7]\n",
+    "df2015_BU[['G_Sep']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[8]\n",
+    "df2015_BU[['G_Oct']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[9]\n",
+    "df2015_BU[['G_Nov']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[10] \n",
+    "df2015_BU[['G_Dec']] = df2015_BU[['G_EUI']] * G_dstri_2015_Norm[11] \n",
+    "\n",
+    "\n",
+    "#Monthly distribution of Electricity EUI in each BU property in 2015\n",
+    "df2015_BU[['E_Jan']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[0] \n",
+    "df2015_BU[['E_Feb']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[1] \n",
+    "df2015_BU[['E_Mar']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[2]\n",
+    "df2015_BU[['E_Apr']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[3] \n",
+    "df2015_BU[['E_May']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[4]\n",
+    "df2015_BU[['E_Jun']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[5]\n",
+    "df2015_BU[['E_Jul']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[6]\n",
+    "df2015_BU[['E_Aug']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[7]\n",
+    "df2015_BU[['E_Sep']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[8]\n",
+    "df2015_BU[['E_Oct']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[9]\n",
+    "df2015_BU[['E_Nov']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[10] \n",
+    "df2015_BU[['E_Dec']] = df2015_BU[['E_EUI']] * E_dstri_2015_Norm[11] \n",
+    "\n",
+    "\n",
+    "#Monthly distribution of Gas EUI in each BU property in 2016\n",
+    "df2016_BU[['G_Jan']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[0] \n",
+    "df2016_BU[['G_Feb']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[1] \n",
+    "df2016_BU[['G_Mar']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[2]\n",
+    "df2016_BU[['G_Apr']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[3] \n",
+    "df2016_BU[['G_May']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[4]\n",
+    "df2016_BU[['G_Jun']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[5]\n",
+    "df2016_BU[['G_Jul']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[6]\n",
+    "df2016_BU[['G_Aug']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[7]\n",
+    "df2016_BU[['G_Sep']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[8]\n",
+    "df2016_BU[['G_Oct']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[9]\n",
+    "df2016_BU[['G_Nov']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[10] \n",
+    "df2016_BU[['G_Dec']] = df2016_BU[['G_EUI']] * G_dstri_2016_Norm[11] \n",
+    "\n",
+    "#Monthly distribution of Electricity EUI in each BU property in 2016\n",
+    "df2016_BU[['E_Jan']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[0] \n",
+    "df2016_BU[['E_Feb']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[1] \n",
+    "df2016_BU[['E_Mar']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[2]\n",
+    "df2016_BU[['E_Apr']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[3] \n",
+    "df2016_BU[['E_May']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[4]\n",
+    "df2016_BU[['E_Jun']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[5]\n",
+    "df2016_BU[['E_Jul']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[6]\n",
+    "df2016_BU[['E_Aug']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[7]\n",
+    "df2016_BU[['E_Sep']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[8]\n",
+    "df2016_BU[['E_Oct']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[9]\n",
+    "df2016_BU[['E_Nov']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[10] \n",
+    "df2016_BU[['E_Dec']] = df2016_BU[['E_EUI']] * E_dstri_2016_Norm[11] \n",
+    "\n",
+    "#Monthly distribution of Gas EUI in each BU property in 2017\n",
+    "df2017_BU[['G_Jan']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[0] \n",
+    "df2017_BU[['G_Feb']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[1] \n",
+    "df2017_BU[['G_Mar']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[2]\n",
+    "df2017_BU[['G_Apr']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[3] \n",
+    "df2017_BU[['G_May']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[4]\n",
+    "df2017_BU[['G_Jun']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[5]\n",
+    "df2017_BU[['G_Jul']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[6]\n",
+    "df2017_BU[['G_Aug']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[7]\n",
+    "df2017_BU[['G_Sep']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[8]\n",
+    "df2017_BU[['G_Oct']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[9]\n",
+    "df2017_BU[['G_Nov']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[10] \n",
+    "df2017_BU[['G_Dec']] = df2017_BU[['G_EUI']] * G_dstri_2017_Norm[11] \n",
+    "\n",
+    "#Monthly distribution of Electricity EUI in each BU property in 2017\n",
+    "df2017_BU[['E_Jan']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[0] \n",
+    "df2017_BU[['E_Feb']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[1] \n",
+    "df2017_BU[['E_Mar']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[2]\n",
+    "df2017_BU[['E_Apr']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[3] \n",
+    "df2017_BU[['E_May']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[4]\n",
+    "df2017_BU[['E_Jun']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[5]\n",
+    "df2017_BU[['E_Jul']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[6]\n",
+    "df2017_BU[['E_Aug']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[7]\n",
+    "df2017_BU[['E_Sep']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[8]\n",
+    "df2017_BU[['E_Oct']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[9]\n",
+    "df2017_BU[['E_Nov']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[10] \n",
+    "df2017_BU[['E_Dec']] = df2017_BU[['E_EUI']] * E_dstri_2017_Norm[11] \n",
+    "\n",
+    "print('gas and electricity of BU properties in 2015')\n",
+    "print(df2015_BU[['Gas','Electricity']])"
    ]
   },
   {
