Property Assessment Update

--- a/CS506_Initial_Analysis_Report.ipynb
+++ b/CS506_Initial_Analysis_Report.ipynb
@@ -1772,17 +1772,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Save BU data\n",
-    "df2015_BU.to_csv('df2015_BU.csv')\n",
-    "df2016_BU.to_csv('')\n",
-    "df2017_BU.to_csv('')\n"
+    "df2015_BU.to_csv('df2015_BU_building.csv')\n",
+    "df2016_BU.to_csv('df2016_BU_building.csv')\n",
+    "df2017_BU.to_csv('df2017_BU_building.csv')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Processing property assessment data (2016)\n",
+    "\n",
+    "PS_df_2016 = pd.read_csv('property-assessment-fy2016.csv', dtype = 'str')\n",
+    "PS_df_2016_BU = PS_df_2016.loc[PS_df_2016['OWNER'] == 'BOSTON UNIVERSITY TRSTS OF']\n",
+    "\n",
+    "PS_df_2016_BU.to_csv('test_test_test_BU_2016.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
