2015, 2017 Property Accessment Data Update

--- a/CS506_Initial_Analysis_Report.ipynb
+++ b/CS506_Initial_Analysis_Report.ipynb
@@ -1786,15 +1786,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Processing property assessment data (2016)\n",
+    "\n",
+    "PS_df_2015 = pd.read_csv('property-assessment-fy2015.csv', dtype = 'str')\n",
+    "PS_df_2015_BU = PS_df_2015.loc[PS_df_2016['OWNER'] == 'BOSTON UNIVERSITY TRSTS OF']\n",
+    "PS_df_2015_BU.to_csv('test_test_test_BU_2015.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Processing property assessment data (2016)\n",
     "\n",
     "PS_df_2016 = pd.read_csv('property-assessment-fy2016.csv', dtype = 'str')\n",
     "PS_df_2016_BU = PS_df_2016.loc[PS_df_2016['OWNER'] == 'BOSTON UNIVERSITY TRSTS OF']\n",
-    "\n",
     "PS_df_2016_BU.to_csv('test_test_test_BU_2016.csv')"
    ]
   },
@@ -1805,7 +1819,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Processing property assessment data (2016)\n",
+    "\n",
+    "PS_df_2016 = pd.read_csv('property-assessment-fy2016.csv', dtype = 'str')\n",
+    "PS_df_2016_BU = PS_df_2016.loc[PS_df_2016['OWNER'] == 'BOSTON UNIVERSITY TRSTS OF']\n",
+    "PS_df_2016_BU.to_csv('test_test_test_BU_2016.csv')"
+   ]
   }
  ],
  "metadata": {
