--- a/CS506_Analysis.ipynb
+++ b/CS506_Analysis.ipynb
@@ -12,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import files\n",
@@ -23,15 +21,15 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import normalize\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read data\n",
@@ -42,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Browsing data for Electricity\n",
@@ -54,9 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Browsing data for Gas\n",
@@ -192,11 +186,11 @@
      "text": [
       "E: Parameters\n",
       "(14,)\n",
-      "-51.4370106669\n",
+      "-48.13325201120033\n",
       "\n",
       "G: Parameters\n",
       "(14,)\n",
-      "58.4568017882\n"
+      "61.13502109348905\n"
      ]
     }
    ],
@@ -209,6 +203,14 @@
     "\n",
     "linearModel_E.fit(X_E, Y_E)\n",
     "linearModel_G.fit(X_G, Y_G)\n",
+    "\n",
+    "# linear regression accuracy through cross validation\n",
+    "score_E = cross_val_score(linearModel_E, X_E, Y_E, cv=3)\n",
+    "score_linear_mean_E = score_E.mean()\n",
+    "score_G = cross_val_score(linearModel_G, X_G, Y_G, cv=3)\n",
+    "score_linear_mean_G = score_G.mean()\n",
+    "\n",
+    "\n",
     "\n",
     "np.set_printoptions(suppress=True)\n",
     "\n",
@@ -247,17 +249,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -284,35 +286,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.011243</td>\n",
-       "      <td>0.020844</td>\n",
-       "      <td>3.6494</td>\n",
-       "      <td>0.017197</td>\n",
-       "      <td>18.627004</td>\n",
-       "      <td>18.498402</td>\n",
-       "      <td>17.14706</td>\n",
-       "      <td>22.172932</td>\n",
-       "      <td>18.902384</td>\n",
-       "      <td>18.731375</td>\n",
-       "      <td>17.948533</td>\n",
-       "      <td>19.016391</td>\n",
-       "      <td>16.882478</td>\n",
-       "      <td>20.405187</td>\n",
-       "      <td>-51.437011</td>\n",
+       "      <td>0.013288</td>\n",
+       "      <td>0.018409</td>\n",
+       "      <td>3.772179</td>\n",
+       "      <td>0.016693</td>\n",
+       "      <td>16.137848</td>\n",
+       "      <td>15.964847</td>\n",
+       "      <td>14.702094</td>\n",
+       "      <td>19.421576</td>\n",
+       "      <td>16.342977</td>\n",
+       "      <td>16.177176</td>\n",
+       "      <td>15.343214</td>\n",
+       "      <td>16.583071</td>\n",
+       "      <td>14.452517</td>\n",
+       "      <td>17.881133</td>\n",
+       "      <td>-48.133252</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Temperature        WI    GHGI       Age  Uses_College  Uses_Sports  \\\n",
-       "0     0.011243  0.020844  3.6494  0.017197     18.627004    18.498402   \n",
+       "   Temperature        WI      GHGI       Age  Uses_College  Uses_Sports  \\\n",
+       "0     0.013288  0.018409  3.772179  0.016693     16.137848    15.964847   \n",
        "\n",
        "   Uses_ResidentHousing  Uses_Laboratory  Uses_Office  Uses_Hotel  \\\n",
-       "0              17.14706        22.172932    18.902384   18.731375   \n",
+       "0             14.702094        19.421576    16.342977   16.177176   \n",
        "\n",
        "   Uses_Distribution  Uses_Food  Uses_Worship  Uses_Medical      Const  \n",
-       "0          17.948533  19.016391     16.882478     20.405187 -51.437011  "
+       "0          15.343214  16.583071     14.452517     17.881133 -48.133252  "
       ]
      },
      "execution_count": 7,
@@ -333,17 +335,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -370,21 +372,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.190079</td>\n",
-       "      <td>-0.362113</td>\n",
-       "      <td>12.419513</td>\n",
-       "      <td>-0.025554</td>\n",
-       "      <td>-0.313156</td>\n",
-       "      <td>-0.3692</td>\n",
-       "      <td>2.864053</td>\n",
-       "      <td>-5.332409</td>\n",
-       "      <td>0.354835</td>\n",
-       "      <td>0.335194</td>\n",
-       "      <td>0.714276</td>\n",
-       "      <td>-1.095041</td>\n",
-       "      <td>2.027591</td>\n",
-       "      <td>-1.453457</td>\n",
-       "      <td>58.456802</td>\n",
+       "      <td>-0.187267</td>\n",
+       "      <td>-0.427835</td>\n",
+       "      <td>12.531559</td>\n",
+       "      <td>-0.027002</td>\n",
+       "      <td>-0.344456</td>\n",
+       "      <td>-0.227508</td>\n",
+       "      <td>3.051102</td>\n",
+       "      <td>-5.384842</td>\n",
+       "      <td>0.085196</td>\n",
+       "      <td>0.558924</td>\n",
+       "      <td>0.649408</td>\n",
+       "      <td>-1.105248</td>\n",
+       "      <td>1.984628</td>\n",
+       "      <td>-1.575424</td>\n",
+       "      <td>61.135021</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,13 +394,13 @@
       ],
       "text/plain": [
        "   Temperature        WI       GHGI       Age  Uses_College  Uses_Sports  \\\n",
-       "0    -0.190079 -0.362113  12.419513 -0.025554     -0.313156      -0.3692   \n",
+       "0    -0.187267 -0.427835  12.531559 -0.027002     -0.344456    -0.227508   \n",
        "\n",
        "   Uses_ResidentHousing  Uses_Laboratory  Uses_Office  Uses_Hotel  \\\n",
-       "0              2.864053        -5.332409     0.354835    0.335194   \n",
+       "0              3.051102        -5.384842     0.085196    0.558924   \n",
        "\n",
        "   Uses_Distribution  Uses_Food  Uses_Worship  Uses_Medical      Const  \n",
-       "0           0.714276  -1.095041      2.027591     -1.453457  58.456802  "
+       "0           0.649408  -1.105248      1.984628     -1.575424  61.135021  "
       ]
      },
      "execution_count": 8,
@@ -420,9 +422,9 @@
      "output_type": "stream",
      "text": [
       "---------------Mean Suared Error of Electric---------------\n",
-      "2.63340116561\n",
+      "3.633350040459854\n",
       "---------------Mean Suared Error of Gas---------------\n",
-      "8.0485218334\n"
+      "14.454162619617886\n"
      ]
     }
    ],
@@ -460,6 +462,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of linear model on electricity is 0.800500625002194\n",
+      "Accuracy of linear model on gas is 0.6801249101157193\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy of linear model on electricity is',score_linear_mean_E)\n",
+    "print('Accuracy of linear model on gas is', score_linear_mean_G)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -468,14 +489,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of logistic model on electricity is 0.8390122323505799\n",
+      "Accuracy of logistic model on gas is 0.8741185645153234\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/qianzhang/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:605: Warning: The least populated class in y has only 2 members, which is too few. The minimum number of members in any class cannot be less than n_splits=3.\n",
+      "  % (min_groups, self.n_splits)), Warning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Logistic Regression\n",
     "# df_BU_analysis_E\n",
     "# df_BU_analysis_G\n",
-    "\n"
+    "\n",
+    "\n",
+    "# Traning Data\n",
+    "X_E = df_BU_training_E[X_column]\n",
+    "X_G = df_BU_training_G[X_column]\n",
+    "\n",
+    "Y_E = df_BU_training_E['Y_E_Level']\n",
+    "Y_G = df_BU_training_G['Y_G_Level']\n",
+    "\n",
+    "\n",
+    "# Testing Data\n",
+    "X_E_test = df_BU_testing_E[X_column]\n",
+    "X_G_test = df_BU_testing_G[X_column]\n",
+    "\n",
+    "Y_E_test = df_BU_testing_E['Y_E_Level']\n",
+    "Y_G_test = df_BU_testing_G['Y_G_Level']\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "logr_model_E = LogisticRegression()\n",
+    "logr_model_G = LogisticRegression()\n",
+    "\n",
+    "logr_model_E.fit(X_E, Y_E)\n",
+    "logr_model_G.fit(X_G, Y_G)\n",
+    "\n",
+    "score_E = cross_val_score(logr_model_E, X_E, Y_E, cv=3)\n",
+    "score_G = cross_val_score(logr_model_G, X_G, Y_G, cv=3)\n",
+    "\n",
+    "score_logr_mean_E = score_E.mean()\n",
+    "score_logr_mean_G = score_G.mean()\n",
+    "\n",
+    "print('Accuracy of logistic model on electricity is',score_logr_mean_E)\n",
+    "print('Accuracy of logistic model on gas is', score_logr_mean_G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.01461669 -0.00332248 -5.28712221  0.00242437  1.067849    0.17886347\n",
+      "  1.9370223  -1.78204702 -0.49903574 -0.23910736  1.41726598 -1.75753664\n",
+      "  0.39209047 -0.30107442]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logr_E_coef = logr_model_E.coef_\n",
+    "logr_G_coef = logr_model_G.coef_\n",
+    "print(logr_E_coef[0, :])\n",
+    "# print(logr_G_coef.shape)"
    ]
   },
   {
@@ -488,9 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run SVM\n"
@@ -506,9 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run NN\n"
@@ -531,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
