Add quadratic NLR, waiting CV..

--- a/CS506_Analysis.ipynb
+++ b/CS506_Analysis.ipynb
@@ -523,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Regression Regularized (Fail, Performace worse)"
+    "## Cross Validation - Linear Regression Regularized (Fail, Performace worse)"
    ]
   },
   {
@@ -823,6 +823,24 @@
     "printVariables()\n",
     "print()\n",
     "print(results_g_q.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross Validation - Quadratic Nonlinear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Add here..."
    ]
   },
   {
