Update for Logistic Regression

--- a/CS506_Analysis.ipynb
+++ b/CS506_Analysis.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Browsing data for Electricity\n",
@@ -85,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Browsing data for Gas\n",
@@ -95,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Generating Training and Testing sets for 2 regressions (Electricity, Gas)\n",
@@ -118,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def printVariables():\n",
@@ -207,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run the regression:\n",
@@ -429,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # Computing MSE\n",
@@ -519,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Cross validation score for statsmodel linear regression\n",
@@ -630,7 +644,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# df_BU_training_E = df_BU_analysis_E_shuffle.iloc[:num_e, :]\n",
@@ -821,7 +837,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Cross validation score for quadratic linear regression\n",
@@ -906,7 +924,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Cross Validation\n",
     "\n",
     "df_test_E['WI Quadratic'] = df_test_E['WI'] * df_test_E['WI']\n",
     "df_test_G['WI Quadratic'] = df_test_G['WI'] * df_test_G['WI']\n",
@@ -937,39 +955,38 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Y_E_logi = df_BU_training_E['Y_E_Level']\n",
-    "# Y_G_logi = df_BU_training_G['Y_G_Level']\n",
+    "# Electricity\n",
     "\n",
-    "# Y_E_test_logi = df_BU_testing_E['Y_E_Level']\n",
-    "# Y_G_test_logi = df_BU_testing_G['Y_G_Level']\n",
-    "\n",
-    "# # Electricity\n",
-    "# x_e_logi = X_E.values\n",
-    "# y_e_logi = Y_E_logi.values\n",
-    "# x_eTest_logi = X_E_test.values\n",
-    "# y_eTest_logi = Y_E_test_logi.values\n",
-    "\n",
-    "# # Multinomial logistic regression \n",
-    "# x_e_logi = sm.add_constant(x_e_logi)\n",
-    "\n",
-    "# model_e_logi = sm.MNLogit(y_e_logi,x_e_logi)\n",
-    "# results_e_logi = model_e_logi.fit(method = 'bfgs')\n",
+    "# 1. Logistic Regression\n",
+    "# Y_Very_Low_E\n",
     "\n",
     "\n",
-    "# # Gas\n",
-    "# x_g_logi = X_G.values\n",
-    "# y_g_logi = Y_G_logi.values\n",
-    "# x_gTest_logi = X_G_test.values\n",
-    "# y_gTest_logi = Y_G_test_logi.values\n",
+    "#----------------------\n",
     "\n",
-    "# # Multinomial logistic regression \n",
-    "# x_g_logi = sm.add_constant(x_g_logi)\n",
+    "# 2. Logistic Regression\n",
+    "# Y_Low_E\n",
     "\n",
-    "# model_g_logi = sm.MNLogit(y_g_logi,x_g_logi)\n",
-    "# results_g_logi = model_g_logi.fit(method = 'bfgs')\n",
+    "#----------------------\n",
+    "\n",
+    "# 3. Logistic Regression\n",
+    "# Y_Medium_E\n",
+    "\n",
+    "\n",
+    "#----------------------\n",
+    "\n",
+    "# 4. Logistic Regression\n",
+    "# Y_High_E\n",
+    "\n",
+    "\n",
+    "#----------------------\n",
+    "\n",
+    "# 5. Logistic Regression\n",
+    "# Y_Very_High_E\n",
     "\n",
     "\n"
    ]
@@ -977,73 +994,58 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# printVariables()\n",
-    "# print()\n",
-    "# results_e_logi.summary2()"
+    "# Gas\n",
+    "\n",
+    "# 1. Logistic Regression\n",
+    "# Y_Very_Low_G\n",
+    "\n",
+    "\n",
+    "#----------------------\n",
+    "\n",
+    "# 2. Logistic Regression\n",
+    "# Y_Low_G\n",
+    "\n",
+    "#----------------------\n",
+    "\n",
+    "# 3. Logistic Regression\n",
+    "# Y_Medium_G\n",
+    "\n",
+    "\n",
+    "#----------------------\n",
+    "\n",
+    "# 4. Logistic Regression\n",
+    "# Y_High_G\n",
+    "\n",
+    "\n",
+    "#----------------------\n",
+    "\n",
+    "# 5. Logistic Regression\n",
+    "# Y_Very_High_G"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# printVariables()\n",
-    "# print()\n",
-    "# results_g_logi.summary2()"
+    "## Test Accuracy (Logistic)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# # Run Logistic Regression\n",
-    "# # df_BU_analysis_E\n",
-    "# # df_BU_analysis_G\n",
+    "# Test for Electricity\n",
     "\n",
-    "\n",
-    "# # Traning Data\n",
-    "# X_E = df_BU_training_E[X_column]\n",
-    "# X_G = df_BU_training_G[X_column]\n",
-    "\n",
-    "# Y_E = df_BU_training_E['Y_E_Level']\n",
-    "# Y_G = df_BU_training_G['Y_G_Level']\n",
-    "\n",
-    "\n",
-    "# # Testing Data\n",
-    "# X_E_test = df_BU_testing_E[X_column]\n",
-    "# X_G_test = df_BU_testing_G[X_column]\n",
-    "\n",
-    "# Y_E_test = df_BU_testing_E['Y_E_Level']\n",
-    "# Y_G_test = df_BU_testing_G['Y_G_Level']\n",
-    "\n",
-    "\n",
-    "# logr_model_E = LogisticRegression()\n",
-    "# logr_model_G = LogisticRegression()\n",
-    "\n",
-    "# logr_model_E.fit(X_E, Y_E)\n",
-    "# logr_model_G.fit(X_G, Y_G)\n",
-    "\n",
-    "# score_E = cross_val_score(logr_model_E, X_E, Y_E, cv=3)\n",
-    "# score_G = cross_val_score(logr_model_G, X_G, Y_G, cv=3)\n",
-    "\n",
-    "# score_logr_mean_E = score_E.mean()\n",
-    "# score_logr_mean_G = score_G.mean()\n",
-    "\n",
-    "# print('Accuracy of logistic model on electricity is',score_logr_mean_E)\n",
-    "# print('Accuracy of logistic model on gas is', score_logr_mean_G)\n",
-    "\n",
-    "# print('------------------------------------------------')\n",
-    "\n",
-    "# logr_E_coef = logr_model_E.coef_\n",
-    "# logr_G_coef = logr_model_G.coef_\n",
-    "# print(logr_E_coef[0, :])\n",
-    "# # print(logr_G_coef.shape)"
+    "# Test for Gas"
    ]
   }
  ],
@@ -1063,7 +1065,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
