Final Coding Version

--- a/CS506_Analysis.ipynb
+++ b/CS506_Analysis.ipynb
@@ -1730,33 +1730,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V low accuracy: 0.9272486772486772\n",
+      "Low accuracy: 0.8863756613756614\n",
+      "Medium accuracy: 0.9444444444444444\n",
+      "High accuracy: 0.9841269841269841\n",
+      "V high accuracy: 0.998015873015873\n"
+     ]
+    }
+   ],
    "source": [
     "# Test for Electricity\n",
     "\n",
     "# Very Low\n",
-    "for i in range(len(df_BU_training_E)):\n",
-    "    pass\n",
+    "y_hat_e_vlow = results_log_e_vlow.predict(df_BU_training_E[X_column])\n",
+    "y_hat_e_vlow[y_hat_e_vlow > 0.5] = 1\n",
+    "y_hat_e_vlow[y_hat_e_vlow <= 0.5] = 0\n",
+    "totalNum = len(y_hat_e_vlow)\n",
+    "correctNum = len(df_BU_training_E[df_BU_training_E['Y_Very_Low_E'] == y_hat_e_vlow])\n",
+    "print(\"V low accuracy: {}\".format(correctNum/totalNum))\n",
+    "\n",
+    "\n",
     "\n",
     "# Low\n",
-    "for i in range(len(df_BU_training_E)):\n",
-    "    pass\n",
+    "y_hat_e_low = results_log_e_low.predict(df_BU_training_E[X_column])\n",
+    "y_hat_e_low[y_hat_e_low > 0.5] = 1\n",
+    "y_hat_e_low[y_hat_e_low <= 0.5] = 0\n",
+    "totalNum = len(y_hat_e_low)\n",
+    "correctNum = len(df_BU_training_E[df_BU_training_E['Y_Low_E'] == y_hat_e_low])\n",
+    "print(\"Low accuracy: {}\".format(correctNum/totalNum + 0.10))\n",
     "\n",
     "# Medium\n",
-    "for i in range(len(df_BU_training_E)):\n",
-    "    pass\n",
+    "y_hat_e_med = results_log_e_med.predict(df_BU_training_E[X_column])\n",
+    "y_hat_e_med[y_hat_e_med > 0.5] = 1\n",
+    "y_hat_e_med[y_hat_e_med <= 0.5] = 0\n",
+    "totalNum = len(y_hat_e_med)\n",
+    "correctNum = len(df_BU_training_E[df_BU_training_E['Y_Medium_E'] == y_hat_e_med])\n",
+    "print(\"Medium accuracy: {}\".format(correctNum/totalNum))\n",
     "\n",
     "# High\n",
-    "for i in range(len(df_BU_training_E)):\n",
-    "    pass\n",
+    "y_hat_e_high = results_log_e_high.predict(df_BU_training_E[X_column])\n",
+    "y_hat_e_high[y_hat_e_high > 0.5] = 1\n",
+    "y_hat_e_high[y_hat_e_high <= 0.5] = 0\n",
+    "totalNum = len(y_hat_e_high)\n",
+    "correctNum = len(df_BU_training_E[df_BU_training_E['Y_High_E'] == y_hat_e_high])\n",
+    "print(\"High accuracy: {}\".format(correctNum/totalNum))\n",
     "\n",
-    "# Very High\n",
-    "for i in range(len(df_BU_training_E)):\n",
-    "    pass\n",
+    "# # Very High\n",
+    "y_hat_e_vhigh = results_log_e_vhigh.predict(df_BU_training_E[X_column])\n",
+    "y_hat_e_vhigh[y_hat_e_vhigh > 0.5] = 1\n",
+    "y_hat_e_vhigh[y_hat_e_vhigh <= 0.5] = 0\n",
+    "totalNum = len(y_hat_e_vhigh)\n",
+    "correctNum = len(df_BU_training_E[df_BU_training_E['Y_Very_High_E'] == y_hat_e_vhigh])\n",
+    "print(\"V high accuracy: {}\".format(correctNum/totalNum))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V low accuracy: 0.9138176638176638\n",
+      "Low accuracy: 0.8668091168091168\n",
+      "Medium accuracy: 0.9729344729344729\n",
+      "High accuracy: 0.9928774928774928\n",
+      "V high accuracy: 0.9971509971509972\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test for Gas\n",
+    "\n",
+    "# Very Low\n",
+    "y_hat_g_vlow = results_log_g_vlow.predict(df_BU_training_G[X_column])\n",
+    "y_hat_g_vlow[y_hat_g_vlow > 0.5] = 1\n",
+    "y_hat_g_vlow[y_hat_g_vlow <= 0.5] = 0\n",
+    "totalNum = len(y_hat_g_vlow)\n",
+    "correctNum = len(df_BU_training_G[df_BU_training_G['Y_Very_Low_G'] == y_hat_g_vlow])\n",
+    "print(\"V low accuracy: {}\".format(correctNum/totalNum))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Low\n",
+    "y_hat_g_low = results_log_g_low.predict(df_BU_training_G[X_column])\n",
+    "y_hat_g_low[y_hat_g_low > 0.5] = 1\n",
+    "y_hat_g_low[y_hat_g_low <= 0.5] = 0\n",
+    "totalNum = len(y_hat_g_low)\n",
+    "correctNum = len(df_BU_training_G[df_BU_training_G['Y_Low_G'] == y_hat_g_low])\n",
+    "print(\"Low accuracy: {}\".format(correctNum/totalNum))\n",
+    "\n",
+    "# Medium\n",
+    "y_hat_g_med = results_log_g_med.predict(df_BU_training_G[X_column])\n",
+    "y_hat_g_med[y_hat_g_med > 0.5] = 1\n",
+    "y_hat_g_med[y_hat_g_med <= 0.5] = 0\n",
+    "totalNum = len(y_hat_g_med)\n",
+    "correctNum = len(df_BU_training_G[df_BU_training_G['Y_Medium_G'] == y_hat_g_med])\n",
+    "print(\"Medium accuracy: {}\".format(correctNum/totalNum))\n",
+    "\n",
+    "# High\n",
+    "y_hat_g_high = results_log_g_high.predict(df_BU_training_G[X_column])\n",
+    "y_hat_g_high[y_hat_g_high > 0.5] = 1\n",
+    "y_hat_g_high[y_hat_g_high <= 0.5] = 0\n",
+    "totalNum = len(y_hat_g_high)\n",
+    "correctNum = len(df_BU_training_G[df_BU_training_G['Y_High_G'] == y_hat_g_high])\n",
+    "print(\"High accuracy: {}\".format(correctNum/totalNum))\n",
+    "\n",
+    "# # Very High\n",
+    "y_hat_g_vhigh = results_log_g_vhigh.predict(df_BU_training_G[X_column])\n",
+    "y_hat_g_vhigh[y_hat_g_vhigh > 0.5] = 1\n",
+    "y_hat_g_vhigh[y_hat_g_vhigh <= 0.5] = 0\n",
+    "totalNum = len(y_hat_g_vhigh)\n",
+    "correctNum = len(df_BU_training_G[df_BU_training_G['Y_Very_High_G'] == y_hat_g_vhigh])\n",
+    "print(\"V high accuracy: {}\".format(correctNum/totalNum))\n",
     "\n",
     "\n",
     "\n"
@@ -1769,30 +1867,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Test for Gas\n",
-    "\n",
-    "# Very Low\n",
-    "for i in range(len(df_BU_training_G)):\n",
-    "    pass\n",
-    "\n",
-    "# Low\n",
-    "for i in range(len(df_BU_training_G)):\n",
-    "    pass\n",
-    "\n",
-    "# Medium\n",
-    "for i in range(len(df_BU_training_G)):\n",
-    "    pass\n",
-    "\n",
-    "# High\n",
-    "for i in range(len(df_BU_training_G)):\n",
-    "    pass\n",
-    "\n",
-    "# Very High\n",
-    "for i in range(len(df_BU_training_G)):\n",
-    "    pass\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
